# ms2023-view

./: package-lock.json  package.json  vite.config.ts
src/: App.svelte
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  convert_to_chart_data.rs  fetch_convert_output.rs  main.rs  struct_data.rs  tauri_command.rs
src-tauri/src/credential/: auth.rs
src-tauri/src/fetch_convert_output/: convert_graph_data.rs  fetch_graph_data.rs  make_bar_graph.rs  process_and_output_data.rs  sheet_control.rs
src-tauri/src/fetch_convert_output/convert_graph_data/: convert_seisan_srs1a_graph.rs
src-tauri/src/fetch_convert_output/fetch_graph_data/: fetch_seisan_graph.rs
src-tauri/src/tauri_command/: fetch_google_spreadsheet.rs  fetch_message.rs  fetch_struct_data.rs
src/lib/: Chart_BarChart.svelte  Chart_Draw.svelte  Chart_Sre_Normal.svelte  Chart_Sre_Total.svelte  Chart_Srs1a_Normal.svelte  Chart_Srs1a_Total.svelte  Chart_Srs1s_Normal.svelte  Chart_Srs1s_Total.svelte  Chart_Welding_Normal.svelte  Chart_Welding_Total.svelte  Message_Scroll.svelte  Screen1.svelte  Screen2.svelte  Screen3.svelte  Screen4.svelte  Screen5.svelte  myMessageStruct.d.ts  myStruct.d.ts  myTargetStruct.d.ts
