[package]
name = "ms2023-view"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

google-sheets4 = { version = "5.0" }
yup-oauth2 = { version = "8.0   " }
hyper = { version = "0.14" }
hyper-rustls = { version = "0.24" }

tokio = { version = "1", features = ["full"] }

chrono = { version = "0.4" }
dotenvy = { version = "0.15" }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
